fixed navbar and aligned everything basically final, fixed second divider positioning

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 li,
 a {
   font-weight: normal;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #2f2f2f;
   text-decoration: none;
 }
@@ -86,9 +86,12 @@ header {
 }
 
 /* paragraph content */
+.paragraphs {
+  padding-top: 10%;
+}
+
 .heading_project,
 .heading_about {
-  padding-top: 10%;
   font-size: 1.6rem;
   font-weight: 500;
   text-align: center;
@@ -110,7 +113,8 @@ header {
   background-color: #f0efef;
   border-radius: 20;
   height: 1px;
-  margin-top: 10vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
 /* next page button */
 .next_button {
@@ -121,6 +125,7 @@ header {
   background-color: #dde5b6;
   border-radius: 10px;
   margin-bottom: 40px;
+  filter: drop-shadow(5px 4px 7px rgba(0, 0, 0, 0.25));
 }
 
 .next_link_2 {
