--- a/template/style.css
+++ b/template/style.css
@@ -14,7 +14,7 @@
 li,
 a {
   font-weight: normal;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #2f2f2f;
   text-decoration: none;
 }
